--- a/src/sections/germ/parts/ball.tex
+++ b/src/sections/germ/parts/ball.tex
@@ -1,6 +1,6 @@
 % foreword williamson
 \begin{myparagraph}
-    The bundle-germ is indeed a generalization for the isomorphism-germ,
+    The bundle-germ is indeed a generalization of the isomorphism-germ,
     as the following proposition shows.
 \end{myparagraph}
 
