--- a/src/sections/germ/parts/bundle.tex
+++ b/src/sections/germ/parts/bundle.tex
@@ -2,7 +2,7 @@
 \begin{myparagraph}
     We can take this even further by dropping the assumption
     that the two microbundles have the same base space.
-    Note that in this case no comparison to isomorphy can be drawn,
+    Note that in this case no, comparison to isomorphy can be drawn,
     because we have not defined isomorphy between microbundles over different base spaces.
 \end{myparagraph}
 
@@ -13,7 +13,7 @@
     A \defterm{bundle-germ} $\germdef{F}{\bb}{\bb'}$ is a map-germ
     \[ \germdef{F}{(E(\bb), B)}{(E(\bb'), B')} \]
     such that there exists a representative $f: U_f \to E(\bb')$
-    that maps each fiber $\inv{j}(b)$ injectively to a fiber $\inv{j'}(b')$.
+    that maps each fiber $\inv{j}(b)$ in an injective manner to a fiber $\inv{j'}(b')$.
 \end{mystatement}
 
 % diagram
