--- a/src/sections/germ/parts/isomorphism.tex
+++ b/src/sections/germ/parts/isomorphism.tex
@@ -33,7 +33,7 @@
 \begin{mystatement}{definition}[isomorphism-germ]{homotopy::isomorphism}[65]
     An \defterm{isomorphism-germ} between $\bb$ and $\bb'$ is a homeomorphism-germ 
     \[ \germdef{F}{(E(\bb), B)}{(E(\bb'), B)} \]
-    which is \defterm{fiber-preserving}, that is $J' \circ F = J$.
+    which is \defterm{fiber-preserving}, that is, $J' \circ F = J$.
 \end{mystatement}
 
 % remark
