--- a/src/sections/homotopy/parts/glueing.tex
+++ b/src/sections/homotopy/parts/glueing.tex
@@ -5,7 +5,7 @@
 % \end{myparagraph}
 
 % lemma
-\begin{mystatement}{lemma}{homotopy::glueing}[67]
+\begin{mystatement}{lemma}{homotopy::gluing}[67]
     % conditions
     Let $\bb$ be a microbundle over $B$ and let $\coll{B_\alpha}$
     be a locally finite collection of closed sets covering $B$.
@@ -14,7 +14,7 @@
     such that $F_\alpha = F_\beta$ on $\bb[B_\alpha \cap B_\beta]$.
     % conclusion
     Then there exists a bundle-germ $\germdef{F}{\bb}{\bb'}$ extending $F_\alpha$,
-    that is representatives for $F$ and $F_\alpha$ agree on a sufficiently small neighborhood of $i(B_\alpha)$.
+    that is, representatives for $F$ and $F_\alpha$ agree on a sufficiently small neighborhood of $i(B_\alpha)$.
 \end{mystatement}
 
 % proof
