--- a/src/sections/homotopy/parts/theorem.tex
+++ b/src/sections/homotopy/parts/theorem.tex
@@ -1,6 +1,6 @@
 % foreword
 \begin{myparagraph}
-    Finally, we gathered all the tools to proof the Homotopy Theorem.
+    Finally, we gathered all the tools to prove the Homotopy Theorem.
 \end{myparagraph}
 
 % proof
