--- a/src/sections/microbundle/parts/definition.tex
+++ b/src/sections/microbundle/parts/definition.tex
@@ -8,7 +8,7 @@
         \item $i: B \to E$ (\defterm{injection}) and $j: E \to B$ (\defterm{projection})
         are maps such that $j \circ i = id_B$
         \item Every $b \in B$ is \defterm{locally trivializable},
-        that is there exist open neighborhoods $U \sub B$ of $b$ and $V \sub E$ of $i(U)$
+        that is. there exist open neighborhoods $U \sub B$ of $b$ and $V \sub E$ of $i(U)$
         together with a homeomorphism $\phi: V \isomto U \cross \R^n$ such that the following diagram commutes:
         \[
             \begin{tikzcd}[column sep=tiny]
