--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -3,7 +3,7 @@
     Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle.
     The \defterm{underlying microbundle} $\abs{\xi}$ of $\xi$ is a microbundle
     \[ \bundledef{\abs{\xi}}{B}{E}{i}{\pi} \]
-    where $i: B \to E$ denotes the \defterm{zero-cross section} of $\xi$, that is
+    where $i: B \to E$ denotes the \defterm{zero-cross section} of $\xi$, that is,
     the section that maps every $b \in B$ to the neutral element $0_b$
     of its fiber $\inv{\pi}(b) \cong \R^n$.
 \end{mystatement}
@@ -28,6 +28,6 @@
     Additionally, $\pi \circ i = id_B$ since $\pi(i(b)) = \pi(0_b) = b$. 
 
     % local triviality
-    Local triviality is immediatly inherited from
+    Local triviality is immediately inherited from
     the local triviality condition for vector bundles.
 \end{myproof}
