--- a/src/sections/normal/parts/milnor.tex
+++ b/src/sections/normal/parts/milnor.tex
@@ -14,12 +14,12 @@
 
     % theorem
     \begin{mystatement}{theorem}[Milnors Theorem]{normal::milnor}[62]
-        For a sufficently large $q \in \N$, $N = \cyldown{N}$ has a normal microbundle in $M \cross \R^q$.
+        For a sufficiently large $q \in \N$, $N = \cyldown{N}$ has a normal microbundle in $M \cross \R^q$.
     \end{mystatement}
 
     % proof
     \begin{myproof}
-        We assume that $M$ is embedded in euclidean space $\R^{2m + 1}$ \cite[p.60]{dimension}.
+        We assume that $M$ is embedded in Euclidean space $\R^{2m + 1}$ \cite[p.60]{dimension}.
         Additionally, let $V$ be an open neighborhood of $N$ in $M$ together with a retraction $r: V \to N$.
 
         We show the theorem in multiple steps.
@@ -42,7 +42,7 @@
             we may assume that
             \[ E(\rwhitney) = V \cross \R^q \]
             for some $q \in \N$.
-            In particular, we derive that $E(\rwhitney)$ is a manifold.
+            Particularly, we derive that $E(\rwhitney)$ is a manifold.
 
             We denote the injection and projection of $\rtn$ by $i_{\bt}$ and $j_{\bt}$,
             and the injection and projection of $\ind{r}\eta$ by $i_{\eta}$ and $j_{\eta}$.
