--- a/src/sections/normal/parts/uniqueness.tex
+++ b/src/sections/normal/parts/uniqueness.tex
@@ -4,7 +4,7 @@
     the normal microbundle is not defined in a constructive manner.
     Therefore, the question arises in which sense the normal microbundle
     of a submanifold $N \sub M$ is unique.
-    In fact, it is unkown whether a such normal microbundle is unique up to isomorphy.
+    In fact, it is unknown whether a such normal microbundle is unique up to isomorphy.
     Instead, we have the following statement about uniqueness.
 \end{myparagraph}
 
@@ -54,7 +54,7 @@
         are equal.
         % homeomorphy + commutativity
         Additionally,
-        the injection and projection maps agree as the following equations show:
+        the injection and projection maps agree, as the following equations show:
         \begin{align}
             & i_{\pi_1}(\Delta(m)) = i_{\pi_1}(m, m) = (m, m, \iota(m)) = (\Delta(m), \iota(m)) \\
             & \pi_1(j_{\pi_1}(m_1, m_2, u)) = \pi_1(m_1, m_2) = m_1 = r(u) = j_{\oplus}(m_1, m_2, u)
@@ -66,7 +66,7 @@
         We show that there exists a neighborhood $D \sub N \cross N$ of $\Delta(M)$ such that
         $\pi_1\restr{D}$ is homotopic to $\pi_2\restr{D}$:
 
-        Firstly, we assume that $M$ is embedded in euclidean space (see\cite[p.60]{dimension}).
+        Firstly, we assume that $M$ is embedded in Euclidean space (see\cite[p.60]{dimension}).
         Let $V \sub N$ be a neighborhood retract of $M$.
         We define $D$ as follows:
         \[ D = \set{(m, m') \in M \cross M}{ tm + (1 - t)m' \in V, \forall t \in \I} \]
@@ -74,7 +74,7 @@
         \[ H((m, m'), t) = tm + (1 - t)m'. \]
 
         Applying the Homotopy Theorem yields $\ind{\pi_1}\bn\restr{D} \cong \ind{\pi_2}\bn\restr{D}$, and
-        by restricting the total spaces accordingly we get
+        by restricting the total spaces accordingly, we get
         $\bt_M \circ \ind{\pi_1}\bn \cong \bt_M \circ \ind{\pi_2}\bn$.
     \end{steps}
     The claim follows by Step 1, 2 and 3.
