--- a/src/sections/rooted/parts/homotopy.tex
+++ b/src/sections/rooted/parts/homotopy.tex
@@ -88,7 +88,7 @@
 % proof theorem
 \begin{myproof}[of the Rooted Homotopy Theorem]
     We need to show that $\ind{f}\bb$ and $\ind{g}\bb$ are rooted isomorphic,
-    that is there exists an isomorphism-germ $\germ{\ind{f}\bb}{\ind{g}\bb}$
+    that is, there exists an isomorphism-germ $\germ{\ind{f}\bb}{\ind{g}\bb}$
     extending $\inv{R_g} \circ R_f = I$
     where $I$ denotes the identity germ.
 
@@ -119,7 +119,7 @@
 
     We continue with the proof of \myintref{homotopy::lemma3}.
     Note that $\lambda_V(a_0) = 1$.
-    That is because we removed $a_0$ from every other set and hence $\lambda_\alpha(a_0) = 0$.
+    That is because we removed $a_0$ from every other set, and hence $\lambda_\alpha(a_0) = 0$.
 
     Lastly, we construct the extension $R_V$ for $r_V$
     like in \myintref{section::homotopy_prove},
