--- a/src/sections/rooted/parts/wedge.tex
+++ b/src/sections/rooted/parts/wedge.tex
@@ -4,7 +4,7 @@
     we are able to define the wedge sum.
     As we will see in the subsequent proof,
     we require rootings for its definition.
-    Particulary, the wedge sum depends on the specific choices of these rootings,
+    Particularly, the wedge sum depends on the specific choices of these rootings,
     justifying the requirement for rooted-microbundles.
 
     Given a quotient space $A \sqcup B / \sim$ and maps $f: A \to C$ and $g: B \to C$, we define
@@ -40,11 +40,11 @@
             % injection
             \item The injection map $i_a \cup i_b$ is well-defined because 
             \[ [i(a_0)] = [i_a(a_0)] = [f(i_a(a_0))] = [i_b(b_0)] = [i(b_0)] \]
-            and continuous since both $i_a$ and $i_b$ are continuous.
+            and continuous, since both $i_a$ and $i_b$ are continuous.
             % projection
             \item The projection map $j_a \cup j_b$ is well-defined because
             \[ \forall e \in W_a: [j(e)] = [j_a(e)] = [a_0] = [b_0] = [j_b(f(e))] = [j(f(e))] \]
-            and continuous since both $j_a$ and $j_b$ are continuous.
+            and continuous, since both $j_a$ and $j_b$ are continuous.
             % compatibility
             \item The composition $j \circ i$ is the identity because
             \[ \forall a \in A: j(i(a)) = j(i_a(a)) = j_a(i_a(a)) = a \]
@@ -64,7 +64,7 @@
             Without loss of generality,
             we can assume that $U \cap B = \emptyset$ by subtracting
             $\{a_0\}$ from $U$ if necessary.
-            Note that $\{a_0\}$ is closed since $A$ is hausdorff.
+            Note that $\{a_0\}$ is closed, since $A$ is hausdorff.
             
             % show
             Now we can simply use this trivialization for $\ba \vee \bb$ because
