--- a/src/sections/suspension/parts/commutativity.tex
+++ b/src/sections/suspension/parts/commutativity.tex
@@ -32,6 +32,6 @@
     which extends $\whitney{R}{\inv{R}}$ since $\psi(b_0, x, y) = (b_0, x, y)$, and
     which coincides with $F$ over $U \cap \inv{\lambda}(0)$.
     
-    Pieced together with $F\restr{\inv{\lambda}(b)}$ using \myintref{homotopy::glueing},
+    Pieced together with $F\restr{\inv{\lambda}(b)}$ using \myintref{homotopy::gluing},
     we obtain our required isomorphism germ. 
 \end{myproof}
