--- a/src/sections/suspension/parts/paracompact.tex
+++ b/src/sections/suspension/parts/paracompact.tex
@@ -18,7 +18,7 @@
     
     Consider the (locally) finite open cover of $B$ given by $U$ and $B - \{b_0\}$.
     Since $B$ is paracompact, we can apply the theory
-    of partitions of unity which yields a map
+    of Partitions of Unity, which yields a map
     $\lambda: B \to [0, 1] \twith \supp{\lambda} \sub U$ and $\lambda(b_0) = 1$.
 
     We choose $W = \supp{\lambda} \sub U$,
