--- a/src/sections/suspension/parts/whitney.tex
+++ b/src/sections/suspension/parts/whitney.tex
@@ -1,6 +1,6 @@
 % definition
 \begin{mystatement}{definition}{suspension::whitney}[70]
-    Given two two rooted microbundles $\bb$ and $\bb'$ over $B$,
+    Given two rooted microbundles $\bb$ and $\bb'$ over $B$,
     we equip the Whitney sum $\whitney{\bb}{\bb'}$ with the rooting
     \[ \germdef{\whitney{R}{R'}}{(\whitney{\bb}{\bb'})\restr{b_0}}{\whitney{\be[n_1]{b_0}}{\be[n_2]{b_0}} = \be[n_1 + n_1]{b_0}} \]
     represented by the direct sum of two representatives for $R$ and $R'$.
