--- a/src/sections/whitney/parts/compatibility.tex
+++ b/src/sections/whitney/parts/compatibility.tex
@@ -10,7 +10,7 @@
     % lemma
     \begin{mystatement}{lemma}{whitney::compatibility}
         Let $\bb_1$ and $\bb_1$ be two microbundles over $B$ and let $f: A \to B$ be a map.
-        The induced microbundle and the Whitney sum are compatible, that is
+        The induced microbundle and the Whitney sum are compatible, that is,
         \begin{center}
             $\wleft \cong \wright$.
         \end{center}
