--- a/src/sections/whitney/parts/trivialize.tex
+++ b/src/sections/whitney/parts/trivialize.tex
@@ -1,6 +1,6 @@
 % foreword
 \begin{myparagraph}
-    In the remainder of this section, we show the above mentioned theorem about the
+    In the remainder of this section, we show the above-mentioned theorem about the
     existence of an `inverse' in respect to the Whitney sum.
     This statement is essential for the proof of Milnors \Cref{normal::milnor}.
 
@@ -57,7 +57,7 @@
         % extend
         \item $\whitney{\bn'}{\be{B'}}$ can be extended over $B$
 
-        One difficulty is that the individual $d$-simplices are not well-seperated.
+        One difficulty is that the individual $d$-simplices are not well-separated.
         To deal with this, we consider $B''$ which is defined to be $B$
         with small open $d$-cells removed from every $d$-simplex.
         Since $B'$ is a retract of $B''$, we can extend $\whitney{\bn'}{\be{B'}}$ to a microbundle $\nu$ over $B''$.
