--- a/thesis.tex
+++ b/thesis.tex
@@ -30,7 +30,7 @@
     This section introduces two standard constructions for microbundles,
     the `induced microbundle' and the `Whitney sum'.
     Both constructions have their vector bundle analogue
-    and many results carry over immediatly to microbundles.
+    and many results carry over immediately to microbundles.
 \end{myparagraph}
 % Document :: Constructions :: Induced
 \subsection*{Induced Microbundles}\label{section::induced}{\blankbreak}
@@ -41,7 +41,7 @@
 % Document :: Homotopy
 \section{The Homotopy Theorem}\label{chapter::homotopy}
 \begin{myparagraph}
-    In this section we will prove the Homotopy Theorem,
+    In this section, we will prove the Homotopy Theorem,
     which is a fundamental result over microbundles.
     It states the following.
 \end{myparagraph}
