--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -48,12 +48,12 @@
     The core idea behind this approach is
     to drop the assumption
     that the tangent bundle is a vector bundle and hence
-    every fiber must be homeomorphic to euclidean space.
-    Instead, we require that the fibers are `germs' of euclidean space,
-    i.e. topological spaces with an open subset homeomorphic to euclidean space.
+    every fiber must be homeomorphic to Euclidean space.
+    Instead, we require that the fibers are `germs' of Euclidean space,
+    i.e. topological spaces with an open subset homeomorphic to Euclidean space.
     In contrast to the previous approach,
     we can now choose the neighborhoods $U_p$ of $p$ regardless of any corresponding charts.
-    That is because we do not require anymore that these neighborhoods are euclidean spaces.
+    That is because we do not require anymore that these neighborhoods are Euclidean spaces.
     Moreover, each neighborhood of $p$ contains
     the domain of a chart, hence satisfying our `germ' condition.
 
@@ -61,7 +61,7 @@
     we may as well always choose the entire space $M$ for the sake of simplicity.
 
     We conclude that our resulting total space is of the form $M \cross M$, which,
-    analoguous to the smooth case, comes equipped with a projection
+    analogous to the smooth case, comes equipped with a projection
     \[ M \cross M \xto{\pi} M, \pi(m, m') = m. \]
     
     % topological :: microbundle
@@ -69,7 +69,7 @@
     that generalizes this idea.
     He calls them `microbundles'.
     Many fundamental properties
-    and constructions of vector bundles carry over other to microbundles,
+    and constructions of vector bundles carry over to microbundles,
     e.g. induced microbundles or the Whitney sum (see \myintref{chapter::constructions}).
     Moreover, Milnor shows that if a manifold can be equipped with a smooth structure,
     then the tangent vector bundle regarded as a microbundle is isomorphic to the
@@ -84,14 +84,14 @@
     \[ N_p P = T_p M / T_p N. \]
     In contrast to this, the two mathematicians C. Rourke and B. Sanderson could construct a $19$-dimensional manifold
     embedded in $S^{29}$ that does not admit a normal microbundle \cite{rourke}.
-    So the existence of a normal microbundle of a submanifold $N \sub M$ is not garantueed.
+    So the existence of a normal microbundle of a submanifold $N \sub M$ is not guaranteed.
     Instead, Milnor could show that there always exists a normal microbundle
     of $N$ in a stabilization $M \cross \R^q$ for some $q \in \N$.
 
     % applications
     Milnors studies on microbundles allowed Robert Williamson
     to transfer results in cobordism theory developed by Réne Thom,
-    particulary the concept of transverse regularity, from the smooth category
+    in particular the concept of transverse regularity, from the smooth category
     over to the piecewise category (see \cite{williamson}).
 
     % thesis structure
