--- a/src/sections/germ/parts/williamson.tex
+++ b/src/sections/germ/parts/williamson.tex
@@ -48,7 +48,7 @@
         it follows that $f$ is an open map.
 
         % general case
-        \item Glueing together $f: U_f \to E(\bb')$ along local trivializations
+        \item Gluing together $f: U_f \to E(\bb')$ along local trivializations
 
         For an arbitrary $b \in B$, choose local trivializations $(U, V, \phi)$ and $(U', V', \phi')$ of $b$ in $\bb$ and $\bb'$.
         Without loss of generality,
@@ -61,9 +61,9 @@
         
         We define a map $U_b \cross \R^n \to U_b \cross \R^n$ given by
         \[ U_b \cross \R^n \cong  U_b \cross \ball[\eps] \xto{\phi \circ f \circ \inv{\phi}} U_b \cross \R^n \]
-        that is injective and fiber-preserving and hence an open map (Step 1).
+        that is injective and fiber-preserving, and hence an open map (Step 1).
         It follows that $f: \inv{\phi}(U_b \cross \ball[\eps]) \to V'$
-        must be an open map as the other composing maps are homeomorphisms.
+        must be an open map, as the other composing maps are homeomorphisms.
 
         We conclude from 
         \[ f = \bigcup_{b \in B}f\restr{\inv{\phi}(U_b \cross \ball[\eps])} \]
