--- a/src/sections/induced/parts/simplex.tex
+++ b/src/sections/induced/parts/simplex.tex
@@ -20,7 +20,7 @@
 
     We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ with
     \[ \phi((t_1, \dots, t_{d + 1}), \lambda) = (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \]
-    Particulary, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
+    Particularly, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
 
     It follows that $B' \cup_f C \partial\Delta \cong B' \cup \Delta$, which concludes the proof.
 \end{myproof}
