--- a/src/sections/suspension/parts/triviality.tex
+++ b/src/sections/suspension/parts/triviality.tex
@@ -23,7 +23,7 @@
         \[ \psi((b, i), e) = \case{e}{(b, \snd{f}(e))}{i = 1}. \]
         Note that $\psi$ is well-defined, because
         \[ \psi((b_0, 1), e) = e = f(e) = (b_0, \snd{f}(e)) = \psi((b_0, 2), e). \]
-        Furthemore, $\psi$ is a homeomorphism as both of its summands are homeomorphisms.
+        Furthermore, $\psi$ is a homeomorphism as both of its summands are homeomorphisms.
 
         % commutativity
         It remains to be shown that $\psi$
