--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -9,6 +9,6 @@
     simplicial complex, there exists an inverse in respect to the Whitney sum.
     Furthermore, we show that homotopic maps yield isomorphic induced microbundles.
     These results permit the proof
-    that every submanifold $N \sub M$ has a normal microbundle
+    that every topological submanifold $N \sub M$ has a normal microbundle
     in a stabilization $M \cross \R^q$ of the surrounding manifold.
 \end{abstract}
