--- a/src/sections/homotopy/parts/lemma3.tex
+++ b/src/sections/homotopy/parts/lemma3.tex
@@ -60,7 +60,7 @@
 
             Applying the well-ordering theorem,
             which is equivalent to the axiom of choice (see\cite[p.14]{kuczma}),
-            we can assume an ordering for $\coll{V_\alpha}$.
+            we may assume an ordering for $\coll{V_\alpha}$.
 
             Let $\coll{B_\beta}$ be a locally finite closed cover of $B$
             such that $B_\beta$ intersects only
