--- a/src/sections/homotopy/parts/paracompact.tex
+++ b/src/sections/homotopy/parts/paracompact.tex
@@ -40,4 +40,5 @@
         it follows that $\overline{B_\beta}$ intersects
         with the same $V_{\alpha_1}, \dots V_{\alpha_k}$.
     \end{sectionize}
+    This completes the proof.
 \end{myproof}
