--- a/src/sections/induced/parts/cone.tex
+++ b/src/sections/induced/parts/cone.tex
@@ -78,18 +78,18 @@
     is equal to $f$ if we consider $A = \cylup{A}$.
     From $\ind{r}\bb[A \cross \{1\}] = \ind{(r \circ \iota)}\bb = \ind{f}\bb$ it follows that
     $\ind{r}\bb[A \cross \{1\}]$ is trivial.
-    Furthermore, $\ind{r}\bb[A \cross [\half, 1]]$ is trivial as well
+    Furthermore, $\ind{r}\bb[A \cross (\half, 1]]$ is trivial as well
     due to \myintref{induced::trivial} and the retraction
-    $A \cross [\half, 1] \to \cylup{A}$ with $(a, t) \mapsto (a, 1)$.
+    $A \cross (\half, 1] \to \cylup{A}$ with $(a, t) \mapsto (a, 1)$.
 
     % homeomorpism
     Since $A$ is paracompact hausdorff, we can apply \myintref{microbundle::paracompact}.
     Hence, there exists a homeomorphism
-    \[ \psi: W \isomto A \cross [\half, 1] \cross \R^n \]
-    where $W$ is a neighborhood of $i_r(A)$ in $E(\ind{r}\bb[A \cross [\half, 1]])$.
+    \[ \psi: W \isomto A \cross (\half, 1] \cross \R^n \]
+    where $W$ is a neighborhood of $i_r(A)$ in $E(\ind{r}\bb[A \cross {(\half, 1]}])$.
     Without loss of generality,
-    we may assume that $W = E(\ind{r}\bb[A \cross [\half, 1]])$
-    by removing a closed subset of $E(\ind{r}\bb[A \cross [\half, 1]])$
+    we may assume that $W = E(\ind{r}\bb[A \cross {(\half, 1]}])$
+    by removing a closed subset of $E(\ind{r}\bb[A \cross {(\half, 1]}])$
     if necessary and applying \myintref{microbundle::total}.
 
     % extension
@@ -124,8 +124,8 @@
         \item $t \le \half$
 
         We simply use a local trivialization $(U, V, \phi)$ of $[a, t]$ in $\ind{r}\bb$
-        by restricting $U$ to $A \times [0, \half)$ if necessary.
-        This is valid since the cone and the cylinder equal if restricted to $A \times [0, \half)$.
+        by restricting $U$ to $A \times [0, \frac{3}{4})$ if necessary.
+        This is valid since the cone and the cylinder equal when restricted to $A \times [0, \frac{3}{4})$.
 
         % case 2
         \item $t > \half$
