--- a/src/sections/induced/parts/simplex.tex
+++ b/src/sections/induced/parts/simplex.tex
@@ -18,7 +18,7 @@
     it follows that there exists a microbundle $\bb'$ over $B' \cup_f C\partial\Delta$ extending $\bb$
     if and only if $\ind{f}\bb = \bb[\partial\Delta]$ is trivial.
 
-    We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ with
+    We have a homeomorphism $\phi: C\partial \Delta \isomto \Delta$ given by
     \[ \phi((t_1, \dots, t_{d + 1}), \lambda) = (1 - \lambda) (t_1, \dots, t_{d + 1}) + \frac{\lambda}{d + 1} (1, \dots, 1). \]
     Particularly, $\phi(\partial \Delta \cross \{0\}) = \partial \Delta$.
 
