--- a/src/sections/microbundle/parts/paracompact.tex
+++ b/src/sections/microbundle/parts/paracompact.tex
@@ -1,7 +1,7 @@
 % foreword
 \begin{myparagraph}
-    Considering microbundles over topological manifolds,
-    which are paracompact hausdorff,
+    We are primarily interested in microbundles over topological manifolds.
+    In this case, as topological manifolds are paracompact and hausdorff,
     triviality has stronger implications for the total space.
 \end{myparagraph}
 
