--- a/src/sections/microbundle/parts/underlying.tex
+++ b/src/sections/microbundle/parts/underlying.tex
@@ -1,3 +1,8 @@
+% foreword
+\begin{myparagraph}
+    Next, we show that vector bundles can be regarded as microbundles.
+\end{myparagraph}
+
 % example
 \begin{mystatement}{example}[underlying microbundle]{microbundle::underlying}[55]
     Let $\xi: E \xto{\pi} B$ be a $n$-dimensional vector bundle.
@@ -31,3 +36,13 @@
     Local triviality is immediately inherited from
     the local triviality condition for vector bundles.
 \end{myproof}
+
+% afterword
+\begin{myparagraph}
+    This illustrates why we explicitly require an injection for the definition of the microbundle, 
+    in contrast to the vector bundle.
+    For vector bundles,
+    we have a canonical section from the base space to the total space given by the zero cross section.
+    For microbundles, the fibers are not associated with a specific chart,
+    hence the neutral element of some underlying Euclidean space is not well-defined.
+\end{myparagraph}
