--- a/src/sections/microbundle/section.tex
+++ b/src/sections/microbundle/section.tex
@@ -6,6 +6,8 @@
 
     Throughout this thesis,
     we require that every manifold is paracompact and second-countable.
+    Unless explicitly stated,
+    manifolds do not come equipped with a differentiable structure.
 \end{myparagraph}
 \input{src/sections/microbundle/parts/definition}
 \input{src/sections/microbundle/parts/local}
