--- a/src/sections/normal/parts/milnor.tex
+++ b/src/sections/normal/parts/milnor.tex
@@ -8,12 +8,13 @@
     }
 
     % foreword
-    \begin{myparagraph}
-        Finally, we gathered all the tools to prove Milnors theorem.
-    \end{myparagraph}
+    % \begin{myparagraph}
+    %     Finally, we gathered all the tools to prove Milnors theorem.
+    % \end{myparagraph}
 
     % theorem
     \begin{mystatement}{theorem}[Milnors Theorem]{normal::milnor}[62]
+        Let $N \sub M$ be a submanifold.
         For a sufficiently large $q \in \N$, $N = \cyldown{N}$ has a normal microbundle in $M \cross \R^q$.
     \end{mystatement}
 
