--- a/src/sections/normal/parts/uniqueness.tex
+++ b/src/sections/normal/parts/uniqueness.tex
@@ -16,8 +16,13 @@
     Then $\bt_N \oplus \bn \cong \bt_M\restr{N}$.
 \end{mystatement}
 
+\begin{myparagraph}
+    In order to prove this, we require another construction over microbundles, the composition.
+\end{myparagraph}
+\input{src/sections/normal/parts/composition}
+
 % proof
-\begin{myproof}
+\begin{myproof}[of the proposition]
     We prove this proposition in multiple steps.
     \begin{steps}
         % step 1
