--- a/src/sections/rooted/parts/wedge.tex
+++ b/src/sections/rooted/parts/wedge.tex
@@ -54,7 +54,7 @@
         It remains to be shown that $\ba \vee \bb$ is locally trivial.
 
         Let $x \in A \vee B$.
-        For reasons of symmetry, we can assume that $x \in A$.
+        For reasons of symmetry, we may assume that $x \in A$.
         \begin{caselist}
             % trivial case
             \item $x \neq a_0$
@@ -62,7 +62,7 @@
             % construct
             Choose a local trivialization $(U, V, \phi)$ for $x$ in $\ba$.
             Without loss of generality,
-            we can assume that $U \cap B = \emptyset$ by subtracting
+            we may assume that $U \cap B = \emptyset$ by subtracting
             $\{a_0\}$ from $U$ if necessary.
             Note that $\{a_0\}$ is closed, since $A$ is hausdorff.
             
