--- a/src/sections/suspension/parts/suspension.tex
+++ b/src/sections/suspension/parts/suspension.tex
@@ -9,7 +9,7 @@
 
     Additionally, let $c_1: B \vee B \to B$ denote the map
     that is the identity on the first summand
-    and the constant map $c_{B, b_0}$ on the second summand, i.e.
+    and the constant map $c_{B, b_0}$ on the second summand, i.e,
     \[ c_1(b, i) = \case{b}{b_0}{i = 1}. \]
     We define $c_2$ analogously.
 \end{myparagraph}
