--- a/src/sections/suspension/section.tex
+++ b/src/sections/suspension/section.tex
@@ -1,4 +1,4 @@
-\subsection*{Microbundles over a Suspension}\label{section::suspension}
+\subsection*{The Bouquet Lemma}\label{section::suspension}
 \input{src/sections/suspension/parts/suspension}
 \input{src/sections/suspension/parts/triviality}
 \input{src/sections/suspension/parts/distributivity}
