--- a/src/sections/whitney/parts/trivialize.tex
+++ b/src/sections/whitney/parts/trivialize.tex
@@ -4,14 +4,14 @@
     existence of an `inverse' in respect to the Whitney sum.
     This statement is essential for the proof of Milnors \Cref{normal::milnor}.
 
-    In order to show this, we require the following proposition,
+    In order to show this, we require the following lemma,
     whose proof will be deferred until \myintref{chapter::suspension}.
 
     % ? rephrase
 \end{myparagraph}
 
-% bouquet proposition
-\begin{mystatement}{proposition}[Bouquet Lemma]{whitney::bouquet}[59]
+% bouquet lemma
+\begin{mystatement}{lemma}[Bouquet Lemma]{whitney::bouquet}[59]
     Let $\bb$ be a microbundle over a `bouquet' of spheres $B$, meeting in a single point.
     Then there exists a map $r: B \to B$ such that $\whitney{\bb}{\ind{r}\bb}$ is trivial.
 \end{mystatement}
