--- a/src/titlepage.tex
+++ b/src/titlepage.tex
@@ -2,7 +2,7 @@
     \begin{center}
         \vspace{1.5cm}
         
-        \begin{Large}Bachelorarbeit\end{Large}
+        \begin{Large}Bachelorarbeit Mathematik\end{Large}
         
         \vspace*{1cm}
 
@@ -10,7 +10,7 @@
              
         \vspace{1cm}
  
-        \begin{large}\textbf{Florian Burger}\end{large}
+        \begin{large}\textbf{Florian Burger, 4229203}\end{large}
  
         \vfill
              
@@ -21,7 +21,7 @@
 
             Fakultät für Mathematik und Informatik\\
             Ruprecht-Karls-Universität Heidelberg\\
-            Heidelberg, den 1. Juli 2024
+            Heidelberg, den 16. Juni 2024
         \end{large}
     \end{center}
  \end{titlepage}
