--- a/thesis.tex
+++ b/thesis.tex
@@ -55,7 +55,7 @@
 \input{src/sections/germ/section}
 \input{src/sections/homotopy/section}
 % Docuemnt :: Suspension
-\section{Rooted Microbundles and Suspensions}\label{chapter::suspension}
+\section{Rooted Microbundles and the Bouquet Lemma}\label{chapter::suspension}
 \begin{myparagraph}
     In this section,
     we provide a proof for the Bouquet Lemma stated in \myintref{section::whitney}.
