--- a/src/sections/germ/parts/ball.tex
+++ b/src/sections/germ/parts/ball.tex
@@ -34,7 +34,7 @@
     since both $[f(0), v]$ and $V$ are compact.
     Hence, the intersection has a maximum $v'$ when ordered via $\lambda$.
     Note that the intersection is non-empty since $f(0) \in V$
-    and that $v' \neq v$ since $v \notin V$ by definition.
+    and that $v' \neq v$ since $v \notin V$ by assumption.
 
     The maximum $v'$ is contained in $\partial V$:
     \begin{enumerate}
@@ -44,7 +44,7 @@
         which contradicts with $v'$ being the maximum in $[f(0), v] \cap V$.
     \end{enumerate}
 
-    From $\abs{f(0) - 0} < 1$ and $v \in \clball[1]$ it follows that $\abs{v'} < 1$. 
+    From $\abs{f(0) - 0} < 1$ and $v \in \clball[1]$, it follows that $\abs{v'} < 1$. 
 
     This leads to a contradiction, because
     \[ \inv{f}(v') \in \partial\clball[2] \implies \abs{\inv{f}(v') - v'} = 2 - \abs{v'} > 2 - 1 = 1. \]
