--- a/src/sections/suspension/parts/reflection.tex
+++ b/src/sections/suspension/parts/reflection.tex
@@ -3,7 +3,7 @@
     Let $r: B \isomto B$ denote the `reflection' given by
     \[ r([x, t]) = [x, 1 - t] \]
     and let $c: B \vee B \to B$ denote
-    the identity on the first summand and $r$ on the second summand, i.e.
+    the identity on the first summand and $r$ on the second summand, i.e,
     \[ c(b, i) = \case{b}{r(b)}{i = 1}. \]
 \end{myparagraph}
 
